--- a/deploy/helm/wg-access-server/values.yaml
+++ b/deploy/helm/wg-access-server/values.yaml
@@ -8,6 +8,10 @@ web:
   service:
     type: ClusterIP
 
+secret:
+  keyRef:
+    name: wg-access-server
+
 wireguard:
   config:
     privateKey: ""
