--- a/deploy/helm/wg-access-server/templates/deployment.yaml
+++ b/deploy/helm/wg-access-server/templates/deployment.yaml
@@ -28,6 +28,13 @@ spec:
           securityContext:
             capabilities:
               add: ['NET_ADMIN']
+            {{- if .Values.wireguard.config.nat }}
+            sysctls:
+              - name: net.ipv4.ip_forward
+                value: "1"
+              - name: net.ipv6.conf.all.forwarding
+                value: "1"
+            {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
